; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_iscsi_tcp.c_iscsi_sw_tcp_xmit_qlen.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_iscsi_tcp.c_iscsi_sw_tcp_xmit_qlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iscsi_conn = type { %struct.iscsi_tcp_conn* }
%struct.iscsi_tcp_conn = type { %struct.iscsi_sw_tcp_conn* }
%struct.iscsi_sw_tcp_conn = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.iscsi_segment }
%struct.iscsi_segment = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iscsi_conn*)* @iscsi_sw_tcp_xmit_qlen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iscsi_sw_tcp_xmit_qlen(%struct.iscsi_conn* %0) #0 {
  %2 = alloca %struct.iscsi_conn*, align 8
  %3 = alloca %struct.iscsi_tcp_conn*, align 8
  %4 = alloca %struct.iscsi_sw_tcp_conn*, align 8
  %5 = alloca %struct.iscsi_segment*, align 8
  store %struct.iscsi_conn* %0, %struct.iscsi_conn** %2, align 8
  %6 = load %struct.iscsi_conn*, %struct.iscsi_conn** %2, align 8
  %7 = getelementptr inbounds %struct.iscsi_conn, %struct.iscsi_conn* %6, i32 0, i32 0
  %8 = load %struct.iscsi_tcp_conn*, %struct.iscsi_tcp_conn** %7, align 8
  store %struct.iscsi_tcp_conn* %8, %struct.iscsi_tcp_conn** %3, align 8
  %9 = load %struct.iscsi_tcp_conn*, %struct.iscsi_tcp_conn** %3, align 8
  %10 = getelementptr inbounds %struct.iscsi_tcp_conn, %struct.iscsi_tcp_conn* %9, i32 0, i32 0
  %11 = load %struct.iscsi_sw_tcp_conn*, %struct.iscsi_sw_tcp_conn** %10, align 8
  store %struct.iscsi_sw_tcp_conn* %11, %struct.iscsi_sw_tcp_conn** %4, align 8
  %12 = load %struct.iscsi_sw_tcp_conn*, %struct.iscsi_sw_tcp_conn** %4, align 8
  %13 = getelementptr inbounds %struct.iscsi_sw_tcp_conn, %struct.iscsi_sw_tcp_conn* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store %struct.iscsi_segment* %14, %struct.iscsi_segment** %5, align 8
  %15 = load %struct.iscsi_segment*, %struct.iscsi_segment** %5, align 8
  %16 = getelementptr inbounds %struct.iscsi_segment, %struct.iscsi_segment* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.iscsi_segment*, %struct.iscsi_segment** %5, align 8
  %19 = getelementptr inbounds %struct.iscsi_segment, %struct.iscsi_segment* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = sub nsw i32 %17, %20
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
